# dsv_qt

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  edge.cpp  edge.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h  run_clang_format
src/: application.cpp  application.h  main.cpp
src/application/: application.cpp  application.h  application_gui.cpp  application_gui.h  application_kernel.cpp  application_kernel.h
src/controller/: controller.cpp  controller.h
src/kernel/code_editor/: code_editor_controller.cpp  code_editor_controller.h  code_editor_model.cpp  code_editor_model.h  code_editor_model_controller.cpp  code_editor_model_controller.h  serialized_graph.cpp  serialized_graph.h
src/kernel/data_model/: data_model.cpp  data_model.h  graph.cpp  graph.h
src/kernel/graph_editor/: drawable_graph.h  graph_editor_model.cpp  graph_editor_model.h  graph_editor_model_controller.cpp  graph_editor_model_controller.h  graph_editor_view_controller.cpp  graph_editor_view_controller.h
src/kernel/graph_editor_model/: graph_editor_model.cpp  graph_editor_model.h
src/kernel/model/: model.cpp  model.h
src/kernel/settings_pannel/: settings.h  settings_model.cpp  settings_model.h
src/misc/: Observer.h  QPorts.cpp  QPorts.h  QRunTime.cpp  QRunTime.h  algorithm_action.h  edit_action.h  keyboard_action.h  mouse_action.h  random_gen.cpp  random_gen.h  settings.h
src/model/: model.cpp  model.h
src/static/: static.cpp  static.h  styles.qss
src/ui/: mainwindow.cpp  mainwindow.h
src/ui/graph/: edge.cpp  edge.h  grapheditor.cpp  grapheditor.h  node.cpp  node.h
src/ui/static/: resources.qrc  static.cpp  static.h  styles.qss
src/ui/static/icons/: logo.icns
src/ui/views/code_editor/: code_editor.cpp  code_editor.h
src/ui/views/code_editor/widget/: code_editor_base.cpp  code_editor_base.h  line_number_area.cpp  line_number_area.h
src/ui/views/graph_editor/: edge.cpp  edge.h  edge_item.cpp  edge_item.h  graph_editor.cpp  graph_editor.h  grapheditor.cpp  grapheditor.h  node.cpp  node.h  node_item.cpp  node_item.h
src/ui/views/settings_panel/: settings_panel.cpp  settings_panel.h
src/ui/views/settings_pannel/: settings_pannel.cpp  settings_pannel.h
src/ui/widgets/: activitybar.cpp  activitybar.h  codeeditor.cpp  codeeditor.h  control_panel.cpp  control_panel.h  toolbar.cpp  toolbar.h
src/ui/widgets/toolbar/: activity_bar.cpp  activity_bar.h  toolbar.cpp  toolbar.h
